syntax = "proto3";

package pb;

service CommentServiceExt {
    // 精彩影评
    rpc HotComment(HotCommentReq) returns(HotCommentRsp) {}
    // 进行评论
    rpc MakeComment(MakeCommentReq) returns(MakeCommentRsp) {}
}

message HotCommentReq {
    int64 movieId = 2 ;
}

message HotCommentRsp {
    CommentData data = 1 ;
}

message CommentData {
    CommentMini mini = 1 ;
    CommentPlus plus = 2 ;
}

message CommentMini {
    repeated CommentRecord list = 1 ;
    int64 total = 2 ;
}

message CommentPlus {
    repeated CommentRecord list = 1 ;
    int64 total = 2 ;
}

message CommentRecord {
    string title = 1 ;
    string content = 2 ;
    string headImg = 3 ;
    string nickname = 4 ;
}

message MakeCommentReq {
    int64 movieId = 1 ; // 影片id
    string title = 2 ; // 标题
    string headImg = 3 ;
    string nickname = 4 ; // 用户昵称
    int64 userId = 5 ; // 用户id
    string content = 6 ;
}

message MakeCommentRsp {
}